# practice__django__main

./: db.sqlite3  pyproject.toml
apps/base/: forms.py  models.py  urls.py  views.py
apps/base/migrations/: 0001_initial.py
apps/templates/: base.html  delete_task.html  edit_task.html  index.html  new.html
testDjangoProject/: settings.py  urls.py
