[tool.poetry]
name = "testdjangoproject"
version = "0.1.0"
description = ""
authors = ["1nkret <dima.dls.ua@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
django-crispy-forms = "^2.2"
crispy-bootstrap5 = "^2024.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
